--- a/pvdv5-v2/test/test/client1/mainwindow.ui
+++ b/pvdv5-v2/test/test/client1/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>577</width>
-    <height>301</height>
+    <height>347</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -104,6 +104,16 @@
        <item row="5" column="0">
         <widget class="QLineEdit" name="lineEdit_addcam"/>
        </item>
+       <item row="6" column="1">
+        <widget class="QPushButton" name="pushButton_del">
+         <property name="text">
+          <string>del cam</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QLineEdit" name="lineEdit_delcam"/>
+       </item>
       </layout>
      </widget>
     </item>
@@ -120,7 +130,11 @@
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="0">
-        <widget class="PlayerWidget" name="widget_picture" native="true"/>
+        <widget class="PlayerWidget" name="widget_picture" native="true">
+         <property name="contextMenuPolicy">
+          <enum>Qt::CustomContextMenu</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
